# pixifact

./: .gitignore  AGENTS.md  AI_FIRST_GAME_EDITOR_PLAN.md  CODEX.md  PLAN.md  README.en.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  rollup.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.changeset/: README.md  blue-pixifact-release.md  config.json
apps/editor/src-tauri/: Cargo.toml  tauri.conf.json
apps/editor/src-tauri/capabilities/: default.json
apps/editor/src-tauri/src/: lib.rs  main.rs
docs/: AGENT_CLI_WORKFLOW.md  AI_SCENE_AUTHORING.md  BDD.md  BDD_TDD.md  CLI_MIGRATION.md  COMPILER_SCENE_UNDO_REDO_BDD.md  COMPILER_SCENE_UNDO_REDO_REQUIREMENTS.md  COMPILER_SCENE_UNDO_REDO_TDD.md  COMPILER_SCENE_UNDO_REDO_TDD_BDD_PLAN.md  FLEX_SCENE_LAYOUT.md  NPM_PUBLISHING.md  RUN_MVP_PLAN.md  SCENE_COMPILER_HANDOFF.md  SCENE_COMPILER_NOTES.md  SCENE_VIEW_V1_SPEC.md  STRUCTURED_SCENE_PROPS_BDD.md  STRUCTURED_SCENE_PROPS_REQUIREMENTS.md  STRUCTURED_SCENE_PROPS_TDD.md  TDD.md  TESTING.md
scripts/: check-release-packages.mjs  install-skills.mjs  publish-release-tag.mjs  sync-template-versions.mjs
src/: index.ts
src-tauri/: tauri.conf.json
tests/: agent-panel-ui.test.ts  agent-panel.test.ts  agent-proposal-review.test.ts  ai-gateway-adapter.test.ts  ai-gateway-config.test.ts  ai-model-adapter.test.ts  compiler-scene-commands.test.ts  compiler-scene-document-controller.test.ts  core.test.ts  create-pixifact.test.ts  editor-app-services.test.ts  editor-live-context-ui.test.ts  editor-run-service.test.ts  editor-scene-view-resize-ui.test.ts  (+14 more)
(+301 files in other folders)
