[package]
name = "pixifact-editor"
version = "0.1.3"
description = "Pixifact desktop editor host"
authors = ["youxia <243802688@qq.com>"]
edition = "2021"

[lib]
name = "pixifact_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
